# a2a-security-research

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC-VERIFIED.md  THREAT-MODEL.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: control-catalog.md  sdk-surface.md
docs/agents/: domain.md
pocs/common/: cards.py  server.py  test_cards.py  test_server.py
pocs/routing_hijack/: Makefile  README.md  cassette.json  exploit.py  judge.py  mitigation.py  test_judge.py  test_mitigation.py
pocs/webhook_ssrf/: Makefile  README.md  _server.py  agent.py  exploit.py  metadata_server.py  mitigation.py  test_agent.py  test_mitigation.py
