[project]
name = "a2a-threat-model"
version = "0.1.0"
description = "An A2A threat model, control catalog, and two reproducible local PoCs."
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]==1.1.0",
    "anthropic==0.111.0",
    "uvicorn==0.49.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.18",
    "ty==0.0.51",
    "httpx2==2.4.0",  # starlette 1.3.1 TestClient deprecates plain httpx; httpx2 silences it
    "pip-audit==2.10.1",
    "zizmor==1.26.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["pocs"]
